@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.4 2004/05/14 10:53:29 grant Exp $
+# $NetBSD: Makefile,v 1.5 2004/06/20 18:48:44 xtraeme Exp $
 
 PKGNAME=		${DISTNAME:S/-/-client-/}
-PKGREVISION=		1
 SVR4_PKGNAME=		mysqc
 COMMENT=		MySQL 4, a free SQL database (client)
 
